--- a/ergasia.html
+++ b/ergasia.html
@@ -7,6 +7,8 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
    </head>
    <body>
+		<h1>Arxiki</h1>
+		<a href="biografiko.html">Βιογραφικα</a>
 		<p>Γενικη Αναφορα</p>
 		Κωνσταντινος Κεραμιτσης με ΑΜ:4123
 		<br>
