--- a/ergasia.html
+++ b/ergasia.html
@@ -9,6 +9,7 @@
    <body>
 		<h1>Αρχικη</h1>
 		<a href="biografiko.html">Βιογραφικα</a>
+		<a href="project.html">Project</a>
 		<a href="contact.html">Επικοινωνια</a>
 		<p>Γενικη Αναφορα</p>
 		Κωνσταντινος Κεραμιτσης με ΑΜ:4123
