--- a/ergasia.html
+++ b/ergasia.html
@@ -11,7 +11,8 @@
 		<a href="biografiko.html">Βιογραφικα</a>
 		<a href="project.html">Project</a>
 		<a href="contact.html">Επικοινωνια</a>
-		<p>Γενικη Αναφορα</p>
+		<a href="about.html">About</a>
+		<p><h3>Γενικη Αναφορα</h3></p>
 		Κωνσταντινος Κεραμιτσης με ΑΜ:4123
 		<br>
 		Εχει βασικες γνωσεις c++,java αλλα και μεγαλη ενασχοληση με τις βασεις δεδομενων και την sql.
