--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
    </head>
-   <body>
+   <style>
+    body{
+		background-color:#333366;
+	}
+	</style>
+   <body a link="black" vlink="black">
    <h1> Επικοινωνια </h1>
    <a href="ergasia.html">Αρχικη</a>
    <br>
