--- a/ergasia.html
+++ b/ergasia.html
@@ -6,12 +6,17 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
    </head>
-   <body>
+   <style>
+    body{
+		background-color:#333366;
+	}
+	</style>
+   <body alink="black" vlink="black">
 		<h1>Αρχικη</h1>
 		<a href="biografiko.html">Βιογραφικα</a>
 		<a href="project.html">Project</a>
 		<a href="contact.html">Επικοινωνια</a>
-		<a href="about.html">About</a>
+		<a href="git.html">Οδηγος Git</a>
 		<p><h3>Γενικη Αναφορα</h3></p>
 		Κωνσταντινος Κεραμιτσης με ΑΜ:4123
 		<br>
