--- a/biografiko.html
+++ b/biografiko.html
@@ -6,7 +6,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
    </head>
-   <body>
+   <style>
+    body{
+		background-color:#333366;
+	}
+	</style>
+   <body alink="black" vlink="black">
 		<h1> Βιογραφικο </h1>
 		<a href="ergasia.html">Αρχικη</a>
 		<br>
