--- a/project.html
+++ b/project.html
@@ -2,11 +2,16 @@
 
 <html>
 	<head>
+	<style>
+    body{
+		background-color:#333366;
+	}
+	</style>
 		<title> Ergasia </title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
    </head>
-   <body>
+   <body alink="black" vlink="black">
    <h1>Project</h1>
    <a href="ergasia.html">Αρχική</a>
    <br>
