--- a/biografiko.html
+++ b/biografiko.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 	<head>
@@ -16,19 +16,19 @@
 		<a href="ergasia.html">Αρχικη</a>
 		<br>
 		<br>
-		Κωνσταντινος Κεραμιτσης
+		Κωνσταντίνος Κεραμιτσής
 		<br>
-		Καταγομαι απο την Θεσσαλονικη.Φοιτησα στο ΤΕΙ Ανατολικης Μακεδονιας και Θρακης.Τα χομπι μου ειναι το ποδοσφαιρο αλλα και το μπασκετ.
-		<br>
-		<br>
-		Νικος Δημητριαδης
-		<br>
-		Ειμαι φοιτητης και ανοικω στην τριτοβαθμια εκπαιδευση.Δεν εχω κανενα πτηχιο στην κατοχη μου.
-		<br>
-		Τα χομπι μου ειναι η κολυμβηση και να περναω την ωρα μου ταξιδευοντας με παρεα.
+		Κατάγομαι απο την Θεσσαλονίκη. Φοίτησα στο ΤΕΙ Ανατολικής Μακεδονίας και Θράκης. Τα χόμπι μου ειναι το ποδόσφαιρο αλλά και το μπάσκετ.
 		<br>
 		<br>
-		Στελιος Μπαρμπουνης
+		Νίκος Δημητριάδης
+		<br>
+		Είμαι φοιτητής και ανήκω στην τριτοβάθμια εκπαίδευση. Δεν έχω κανενα πτυχίο στην κατοχη μου.
+		<br>
+		Τα χόμπι μου είναι η κολύμβηση και να περνάω την ώρα μου ταξιδεύοντας με παρέα.
+		<br>
+		<br>
+		Στέλιος Μπαρμπούνης
 		<br>
 		Κατάγομαι από την Χαλκιδική. Φοίτησα στο τμήμα Μηχανικών Πληροφορικής του ΤΕΙ Ανατολικής Μακεδονίας και Θράκης.
         <br>		
