--- a/ergasia.html
+++ b/ergasia.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 	<head>
@@ -12,17 +12,17 @@
 	}
 	</style>
    <body alink="black" vlink="black">
-		<h1>Αρχικη</h1>
-		<a href="biografiko.html">Βιογραφικα</a>
+		<h1>Αρχική</h1>
+		<a href="biografiko.html">Βιογραφικά</a>
 		<a href="project.html">Project</a>
-		<a href="contact.html">Επικοινωνια</a>
+		<a href="contact.html">Επικοινωνία</a>
 		<a href="git.html">Οδηγος Git</a>
-		<p><h3>Γενικη Αναφορα</h3></p>
-		Κωνσταντινος Κεραμιτσης με ΑΜ:4123
+		<p><h3>Γενική Αναφορά</h3></p>
+		<b>Κωνσταντίνος Κεραμιτσής</b> με ΑΜ:4123
 		<br>
-		Εχει βασικες γνωσεις c++,java αλλα και μεγαλη ενασχοληση με τις βασεις δεδομενων και την sql.
+		Εχει βασικές γνώσεις c++,java αλλα και μεγάλη ενασχόληση με τις βάσεις δεδομένων και την sql.
 		<br>
-		Καταγεται απο την Περαια Θεσσαλονικης
+		Κατάγεται απο την Περαία Θεσσαλονίκης
 		<br>
 		<img alt="Keramitsis" src="keramitsis.jpg" height="100" width="100"/>
 		<a href="https://el.wikipedia.org/wiki/%CE%A0%CE%B5%CF%81%CE%B1%CE%AF%CE%B1">
@@ -30,11 +30,11 @@
 		</a>	
 		<br>
 		<br>
-		Νικος Δημητριαδης με ΑΜ:4071
+		<b>Νίκος Δημητριάδης</b> με ΑΜ:4071
 		<br>
-		Εχει αρκετες γνωσεις στην java και στην sql αλλα και στην c++ με διαφορα projects.
+		Έχει αρκετές γνώσεις στην java και στην sql αλλά και στην c++ με διάφορα projects.
 		<br>
-		Καταγεται απο το Γυψοχωρι Πελλας.
+		Κατάγεται απο το Γυψοχώρι Πέλλας.
 		<br>
 		<img  alt="Tsapan" src="tsapan.jpg" height="100" width="100"/>
 		<a href="https://el.wikipedia.org/wiki/%CE%93%CF%85%CF%88%CE%BF%CF%87%CF%8E%CF%81%CE%B9_%CE%A0%CE%AD%CE%BB%CE%BB%CE%B1%CF%82">
@@ -42,11 +42,11 @@
 		</a>
 		<br>
 		<br>
-		Στελιος Μπαρμπουνης  με ΑΜ:4209
+		<b>Στέλιος Μπαρμπούνης</b>  με ΑΜ:4209
 		<br>
-		Ξερει να χρησιμοποιει αριστα την html και εχει αρκετα projects στην java.
+		Ξέρει να χρησιμοποιεί άριστα την html και έχει αρκετά projects στην java.
 		<br>
-		Καταγεται απο την Νεα Γωνια Χαλκιδικης.
+		Κατάγεται απο την Νέα Γωνιά Χαλκιδικής.
 		<br>
 		<img alt="Mpouras" src="mpouras.png" height="100" width="100">
 		<a href="https://el.wikipedia.org/wiki/%CE%9D%CE%AD%CE%B1_%CE%93%CF%89%CE%BD%CE%B9%CE%AC_%CE%A7%CE%B1%CE%BB%CE%BA%CE%B9%CE%B4%CE%B9%CE%BA%CE%AE%CF%82">
