--- a/git.html
+++ b/git.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 	<head>
@@ -16,27 +16,27 @@
    <a href="ergasia.html">Αρχική</a>
    <br>
    <br>
-   mkdir (και το ονομα του φακελου που δημιουργουμε) για να γινει ο πρωτος φακελος.
+   <b>mkdir (και το ονόμα του φακέλου που δημιουργούμε):</b> για να γίνει ο πρώτος φάκελος.
    <br>
    <br>
-   cd (και το ονομα του αρχειου) για να μπουμε μεσα στον φακελο που δημιουργησαμε.
+   <b>cd (και το όνομα του αρχείου):</b> για να μπούμε μέσα στον φάκελο που δημιουργήσαμε.
    <br>
    <br>
-   git init για να ενεργοποιησουμε τον φακελο ωστε να καταλαβει το git οτι ειναι ενα καινουργιο project.
+   <b>git init:</b> για να ενεργοποιήσουμε τον φάκελο, ώστε να καταλάβει το git οτι είναι ενα καινούργιο project.
    <br>
    <br>
-   touch (με το ονομα του πρωτου αρχειου που θα μπει στον φακελο με την καταληξη .html) για να δημιουργουμε το πρωτο μας αρχειο μεσα στον φακελο.
+   <b>touch (με το όνομα του πρώτου αρχείου που θα μπει στον φάκελο με την κατάληξη ".html"):</b> για να δημιουργούμε το πρώτο μας αρχείο μεσα στον φάκελο.
    <br>
    <br>
-   git status για να δουμε τα αρχεια που βρισκονται μεσα στον φακελο μας.
+   <b>git status:</b> για να δούμε τα αρχεία που βρίσκονται μέσα στον φάκελό μας.
    <br>
    <br>
-   git add . για να προσθεσουμε ολα τα αρχειο στον φακελο μας.
+   <b>git add . :</b> για να προσθέσουμε όλα τα αρχεία στον φάκελο μας.
    <br>
    <br>
-   git commit -m "Και ενα μηνυμα" για να αποθηκευσουμε τις αλλαγες μας στο local repository.
+   <b>git commit -m "Και ενα μηνυμα":</b> για να αποθηκεύσουμε τις αλλαγές μας στο local repository.
    <br>
    <br>
-   git push για να μεταφερουμε το τελευταιο commit που καναμε στον server του github
+   <b>git push:</b> για να μεταφέρουμε το τελευταίο commit που κάναμε στον server του github
    </body>
  </html>
