--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 	<head>
@@ -12,21 +12,21 @@
 	}
 	</style>
    <body a link="black" vlink="black">
-   <h1> Επικοινωνια </h1>
-   <a href="ergasia.html">Αρχικη</a>
+   <h1> Επικοινωνία </h1>
+   <a href="ergasia.html">Αρχική</a>
    <br>
    <br>
-   Κωνσταντινος Κεραμιτσης
+   Κωνσταντίνος Κεραμιτσής
    <br>
    email:kokeramitsis@gmail.com
    <br>
    <br>
-   Νικος Δημητριαδης
+   Νίκος Δημητριάδης
    <br>
    email:demetriadesnikos@gmail.com
    <br>
    <br>
-   Στελιος Μπαρμπουνης
+   Στέλιος Μπαρμπούνης
    <br>
    email:steliosmparmpounis25@gmail.com
 
